platform/base/hcloud-ccm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hcloud-cloud-controller-manager
  namespace: kube-system
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: hcloud-cloud-controller-manager
  template:
    metadata:
      labels:
        app: hcloud-cloud-controller-manager
    spec:
      serviceAccountName: hcloud-cloud-controller-manager
      dnsPolicy: Default
      hostNetwork: true
      priorityClassName: system-cluster-critical
      tolerations:
        - key: node.cloudprovider.kubernetes.io/uninitialized
          value: "true"
          effect: NoSchedule
        - key: CriticalAddonsOnly
          operator: Exists
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
        - key: node.kubernetes.io/not-ready
          effect: NoExecute
      containers:
        - name: hcloud-cloud-controller-manager
          image: docker.io/hetznercloud/hcloud-cloud-controller-manager:v1.30.1
          args:
            - --allow-untagged-cloud
            - --cloud-provider=hcloud
            - --feature-gates=CloudControllerManagerWatchBasedRoutesReconciliation=true
            - --route-reconciliation-period=30s
            - --webhook-secure-port=0
            - --allocate-node-cidrs=true
            - --cluster-cidr=10.42.0.0/16
            - --leader-elect=false
          ports:
            - name: metrics
              containerPort: 8233
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
